Fix spacing on heading

--- a/src/assets/styles/components/_heading.scss
+++ b/src/assets/styles/components/_heading.scss
@@ -33,6 +33,7 @@
     max-width: 37.5em;
     font-size: $size-step-1;
     line-height: $size-step-3;
+    margin-bottom: 0;
   }
 
   &__datetime {
@@ -53,11 +54,12 @@
       grid-column: 3/-3;
     }
   }
-}
 
-.heading--home {
-  .heading__title {
-    text-align: center;
-    grid-column: 2/-2;
+
+  &.heading--home {
+    .heading__title {
+      text-align: center;
+      grid-column: 2/-2;
+    }
   }
 }
